--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 graphs
 pdfs
 output
+plots
+GrandPrize2009_BPC_BellKor.pdf
+GrandPrize2009_BPC_BigChaos.pdf
+GrandPrize2009_BPC_PragmaticTheory.pdf
+HSall_members.csv
+HSall_parties.csv
+HSall_rollcalls.csv
+HSall_votes.csv
+New Folder
+pdfs
+plots
+Rplots.pdf
